==> Rx233136/ra6m5-industrial-control-system/src/oled/OLED.c <==
#include "hal_data.h"
#include "oled/OLED_Font.h"
#include "oled/oled.h"
#define I2C_DELAY()  R_BSP_SoftwareDelay(10, BSP_DELAY_UNITS_MICROSECONDS)

void OLED_W_SCL(uint8_t level)
{
    bsp_io_level_t io_lv = level ? BSP_IO_LEVEL_HIGH : BSP_IO_LEVEL_LOW;
    R_IOPORT_PinWrite(&g_ioport_ctrl, BSP_IO_PORT_01_PIN_12, io_lv);
    I2C_DELAY();
}

void OLED_W_SDA(uint8_t level)
{
    bsp_io_level_t io_lv = level ? BSP_IO_LEVEL_HIGH : BSP_IO_LEVEL_LOW;
    R_IOPORT_PinWrite(&g_ioport_ctrl, BSP_IO_PORT_01_PIN_13, io_lv);
    I2C_DELAY();
}

void OLED_WriteCommand(uint8_t Command)
{
    OLED_I2C_Start();
    if(OLED_I2C_SendByte(0x78U) != 0)
    {
        OLED_I2C_Stop();
        return;
    }
    OLED_I2C_SendByte(0x00U);
    OLED_I2C_SendByte(Command);
    OLED_I2C_Stop();
}

void OLED_WriteData(uint8_t Data)
{
    OLED_I2C_Start();
    if(OLED_I2C_SendByte(0x78U) != 0)
    {
        OLED_I2C_Stop();
        return;
    }
    OLED_I2C_SendByte(0x40U);
    OLED_I2C_SendByte(Data);
    OLED_I2C_Stop();
}

void OLED_SetCursor(uint8_t Y, uint8_t X)
{
    OLED_WriteCommand(0xB0U | Y);
    OLED_WriteCommand(0x10U | ((X & 0xF0U) >> 4U));
    OLED_WriteCommand(0x00U | (X & 0x0FU));
}

void OLED_Init(void)
{
    R_IOPORT_Open(&g_ioport_ctrl, g_ioport.p_cfg);
    OLED_W_SDA(1);
    OLED_W_SCL(1);
    R_BSP_SoftwareDelay(200, BSP_DELAY_UNITS_MILLISECONDS);

    OLED_WriteCommand(0xAEU);
    OLED_WriteCommand(0xD5U); OLED_WriteCommand(0x80U);
    OLED_WriteCommand(0xA8U); OLED_WriteCommand(0x3FU);
    OLED_WriteCommand(0xD3U); OLED_WriteCommand(0x00U);
    OLED_WriteCommand(0x40U);
    OLED_WriteCommand(0xA1U);
    OLED_WriteCommand(0xC8U);
    OLED_WriteCommand(0xDAU); OLED_WriteCommand(0x12U);
    OLED_WriteCommand(0x81U); OLED_WriteCommand(0x30U);
    OLED_WriteCommand(0xD9U); OLED_WriteCommand(0xF1U);
    OLED_WriteCommand(0xDBU); OLED_WriteCommand(0x30U);
    OLED_WriteCommand(0xA4U);
    OLED_WriteCommand(0xA6U);
    OLED_WriteCommand(0x8DU); OLED_WriteCommand(0x14U);
    OLED_WriteCommand(0xAFU);

    // 新增：上电强制清空全部显存，消除残留画面
    OLED_Clear();
    R_BSP_SoftwareDelay(50, BSP_DELAY_UNITS_MILLISECONDS);
}
